--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.0",
     "knex": "^0.19.4",
+    "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.0"
   }
 }
